--- a/routing-graziano/src/app/home/home.html
+++ b/routing-graziano/src/app/home/home.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center align-items-center min-vh-100 home-bg">
+<div class="d-flex justify-content-center align-items-center min-vh-100 home-bg" border-0 rounded-4>
   <div class="card shadow-lg border-0 rounded-4 p-4 text-center" style="max-width: 400px;">
     <div class="mb-3">
       <img src="https://cdn-icons-png.flaticon.com/512/616/616408.png" alt="Welcome" style="width:80px; animation: bounce 1.2s infinite;">
@@ -8,16 +8,16 @@
     <div class="container">
       <div class="row justify-content-center g-3">
         <div class="col-6 d-flex justify-content-end">
-          <a routerLink="/animals" routerLinkActive="active-menu" class="btn btn-outline-danger rounded-pill px-4 w-100">Animals</a>
+          <a routerLink="/animals" routerLinkActive="active-menu" class="btn btn-outline-danger rounded-pill px-4 w-100" href="/generic/animals" >Animals</a>
         </div>
         <div class="col-6 d-flex justify-content-start">
-          <a routerLink="/fruits" routerLinkActive="active-menu" class="btn btn-outline-success rounded-pill px-4 w-100">Fruits</a>
+          <a routerLink="/fruits" routerLinkActive="active-menu" class="btn btn-outline-success rounded-pill px-4 w-100" href="/generic/fruits" >Fruits</a>
         </div>
         <div class="col-6 d-flex justify-content-end">
-          <a routerLink="/generic/vehicles" routerLinkActive="active-menu" class="btn btn-outline-info rounded-pill px-4 w-100">Vehicles</a>
+          <a routerLink="/generic/vehicles" routerLinkActive="active-menu" class="btn btn-outline-info rounded-pill px-4 w-100" href="/generic/vehicles" >Vehicles</a>
         </div>
         <div class="col-6 d-flex justify-content-start">
-          <a routerLink="/generic/sports" routerLinkActive="active-menu" class="btn btn-outline-dark rounded-pill px-4 w-100">Sports</a>
+          <a routerLink="/generic/sports" routerLinkActive="active-menu" class="btn btn-outline-dark rounded-pill px-4 w-100" href="/generic/sports" >Sports</a>
         </div>
       </div>
     </div>
