--- a/routing-graziano/src/app/app.html
+++ b/routing-graziano/src/app/app.html
@@ -16,7 +16,6 @@
             <span style="font-size:1.2rem;">🍎</span> Fruits
           </a>
         </li>
-        <li><span class="vr mx-2"></span></li>
         <li class="nav-item">
           <a class="nav-link d-flex align-items-center gap-1" routerLink="/generic/vehicles" routerLinkActive="active-menu">
             <span style="font-size:1.2rem;">🚗</span> Generic Vehicles
@@ -36,6 +35,10 @@
           <a class="nav-link d-flex align-items-center gap-1" routerLink="/generic/fruits" routerLinkActive="active-menu">
             <span style="font-size:1.2rem;">✨🍎</span> Generic Fruits
           </a>
+        </li>
+        <li><span class="vr mx-2"></span></li>
+        <li>
+          <a class="nav-link" routerLink="/data-view" routerLinkActive="active-menu">⚔️⭐️Clash Royale⭐️⚔️</a>
         </li>
       </ul>
     </div>
