--- a/routing-graziano/src/app/app.html
+++ b/routing-graziano/src/app/app.html
@@ -2,11 +2,11 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm rounded mb-4">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold d-flex align-items-center gap-2" href="#">
-        <span style="font-size:2rem; animation: spin 2s linear infinite;">🏠️</span>
-        <span>Graziano Routing</span>
+        <span style="font-size:2rem; animation: spin 2s linear infinite;">👑</span>
+  <span>Clash Royale</span><span style="font-size:2rem; animation: spin 2s linear infinite;">👑</span>
       </a>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center gap-2">
-        <li class="nav-item">
+   <!--<li class="nav-item">
           <a class="nav-link d-flex align-items-center gap-1" routerLink="/animals" routerLinkActive="active-menu">
             <span style="font-size:1.2rem;">🦁</span> Animals
           </a>
@@ -36,7 +36,7 @@
             <span style="font-size:1.2rem;">✨🍎</span> Generic Fruits
           </a>
         </li>
-        <li><span class="vr mx-2"></span></li>
+        <li><span class="vr mx-2"></span></li>-->     
         <li>
           <a class="nav-link" routerLink="/data-view" routerLinkActive="active-menu">⚔️⭐️Clash Royale⭐️⚔️</a>
         </li>
@@ -48,7 +48,7 @@
   </main>
   <footer class="bg-white shadow-sm rounded text-center py-3 mt-4">
     <span class="fw-semibold">
-      <span style="font-size:1.3rem;">🚀</span> Powered by Graziano Routing &nbsp;|&nbsp; <span style="color:#0d6efd;">Enjoy your navigation!</span>
+      <span style="font-size:1.3rem;">🚀</span> Powered by GRAZIANO, MATTIONI, MIHALI &nbsp;|&nbsp; <span style="color:#0d6efd;">Enjoy your navigation!</span>
     </span>
   </footer>
 </div>
